# routes/contacts.js
@@ -1,16 +1,17 @@
 const express = require('express');
-const router = express.Router();
+const router = express();
 
 const contactsController = require('../controllers/contacts');
+const validation = require('../middleware/validate');
 
-router .get('/', contactsController.getAll);
+router.get('/', contactsController.getAll);
 
 router.get('/:id', contactsController.getSingle);
 
-router.post('/', contactsController.createContact);
+router.post('/', validation.saveContact, contactsController.createContact);
 
-router.put('/:id', contactsController.updateContact);
+router.put('/:id', validation.saveContact, contactsController.updateContact);
 
 router.delete('/:id', contactsController.deleteContact);
 
-module.exports = router;
+module.exports = router
